tests/errors/type_mismatch_greater_equal.dang
# Test greater than or equal comparison type mismatch
pub result = "hello" >= 42
